Added the RenderManager, the GameManager, the AbstractLevel, and modified the AbstractGameObject

--- a/BananaBoat/BananaBoat.csproj
+++ b/BananaBoat/BananaBoat.csproj
@@ -36,6 +36,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameLevels\AbstractGameLevel.cs" />
+    <Compile Include="GameManagers\GameManager.cs" />
+    <Compile Include="GameManagers\RenderManager.cs" />
+    <Compile Include="GameObjects\AbstractGameObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -49,8 +53,11 @@
   <ItemGroup>
     <Content Include="Icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Content\" />
+    <Content Include="Content\8Y6x5uJ.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
