Created the Animation class and got it to load animations.  Animations do not play yet.  Also added the AbstractSpriteObject class

--- a/BananaBoat/BananaBoat.csproj
+++ b/BananaBoat/BananaBoat.csproj
@@ -36,10 +36,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameChunks\Animation.cs" />
     <Compile Include="GameLevels\AbstractGameLevel.cs" />
     <Compile Include="GameManagers\GameManager.cs" />
     <Compile Include="GameManagers\RenderManager.cs" />
     <Compile Include="GameObjects\AbstractGameObject.cs" />
+    <Compile Include="GameObjects\GraphicalObjects\AbstractSpriteObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -51,11 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\TestAnimation.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
