Animation only contains data now, implement AbstractAnimatedSpriteObject with basic animation working, added delta time to GameManager, added method to RenderManager to draw quad from source rectangle, misc. things

--- a/BananaBoat/BananaBoat.csproj
+++ b/BananaBoat/BananaBoat.csproj
@@ -41,9 +41,11 @@
     <Compile Include="GameManagers\GameManager.cs" />
     <Compile Include="GameManagers\RenderManager.cs" />
     <Compile Include="GameObjects\AbstractGameObject.cs" />
+    <Compile Include="GameObjects\GraphicalObjects\AbstractAnimatedSpriteObject.cs" />
     <Compile Include="GameObjects\GraphicalObjects\AbstractSpriteObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAnimation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -58,7 +60,11 @@
     </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Content\walmartGuyRunWithGun.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
