--- a/BananaBoat/BananaBoat.csproj
+++ b/BananaBoat/BananaBoat.csproj
@@ -39,13 +39,13 @@
     <Compile Include="GameChunks\Animation.cs" />
     <Compile Include="GameLevels\AbstractGameLevel.cs" />
     <Compile Include="GameManagers\GameManager.cs" />
+    <Compile Include="GameManagers\InputManager.cs" />
     <Compile Include="GameManagers\RenderManager.cs" />
     <Compile Include="GameObjects\AbstractGameObject.cs" />
     <Compile Include="GameObjects\GraphicalObjects\AbstractAnimatedSpriteObject.cs" />
     <Compile Include="GameObjects\GraphicalObjects\AbstractSpriteObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAnimation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
